[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/HUD/Mobile/Mobile_Move_Control.gd" type="Script" id=1]
[ext_resource path="res://Player/HUD/Mobile/arrow.png" type="Texture" id=2]
[ext_resource path="res://Player/HUD/Mobile/arrow-pressed.png" type="Texture" id=3]

[node name="Mobile_Move_Control" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="TouchControls" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="left" type="TouchScreenButton" parent="TouchControls"]
position = Vector2( -112, -32 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="TouchControls"]
position = Vector2( 112, 32 )
rotation = 3.14159
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="down" type="TouchScreenButton" parent="TouchControls"]
position = Vector2( -32, 80 )
rotation = -1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="up" type="TouchScreenButton" parent="TouchControls"]
position = Vector2( 32, -80 )
rotation = 1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1
[connection signal="pressed" from="TouchControls/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="TouchControls/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="TouchControls/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="TouchControls/up" to="." method="_on_up_pressed"]
